--- a/public/config.json
+++ b/public/config.json
@@ -33,22 +33,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "96f4d7ac-b66a-487e-a0ee-99d64ed48ce8",
       "save": {
-        "url": "https://api.pushy.me",
+        "url": "https://custom-activity-v1.herokuapp.com",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://api.pushy.me",
+        "url": "https://custom-activity-v1.herokuapp.com",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://api.pushy.me",
+        "url": "https://custom-activity-v1.herokuapp.com",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://api.pushy.me",
+        "url": "https://custom-activity-v1.herokuapp.com",
         "verb": "POST",
         "useJwt": true
       }
