--- a/public/config.json
+++ b/public/config.json
@@ -21,7 +21,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm.rest.marketingcloudapis.com/journeybuilder/execute",
+          "url": "https://mct9813hhqdnlxcbzr0tkgn9rhhm.rest.marketingcloudapis.com/execute",
            "verb": "POST",
             "body": "",
             "header": "",
