--- a/public/config.json
+++ b/public/config.json
@@ -21,7 +21,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://mc.s10.exacttarget.com/journeybuilder/api/v1/execute",
+          "url": "https://mc.s10.exacttarget.com/journeybuilder/execute",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -33,22 +33,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "9b57ea26-a5e4-4d56-8a2a-51069b256987",
       "save": {
-        "url": "https://mc.s10.exacttarget.com/journeybuilder/api/v1/save",
+        "url": "https://mc.s10.exacttarget.com/journeybuilder/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://mc.s10.exacttarget.com/journeybuilder/api/v1/publish",
+        "url": "https://mc.s10.exacttarget.com/journeybuilder/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://mc.s10.exacttarget.com/journeybuilder/api/v1/stop",
+        "url": "https://mc.s10.exacttarget.com/journeybuilder/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://mc.s10.exacttarget.com/journeybuilder/api/v1/validate",
+        "url": "https://mc.s10.exacttarget.com/journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
       }
