--- a/public/config.json
+++ b/public/config.json
@@ -8,7 +8,7 @@
     "type": "REST",
     "lang": {
         "en-US": {
-            "name": "Pushy Me API Messages",
+            "name": "Pushy API Messages",
           "description": "A Template for a custom Journey Builder activity",
           "step1Label": "Configure Activity"
         }
