--- a/public/config.json
+++ b/public/config.json
@@ -24,7 +24,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://custom-activity-v1.herokuapp.com",
+          "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f/send",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -36,22 +36,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "9b57ea26-a5e4-4d56-8a2a-51069b256987",
       "save": {
-        "url": "https://custom-activity-v1.herokuapp.com",
+        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f/send",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://custom-activity-v1.herokuapp.com",
+        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f/send",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://custom-activity-v1.herokuapp.com",
+        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f/send",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://custom-activity-v1.herokuapp.com",
+        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f/send",
         "verb": "POST",
         "useJwt": true
       }
