--- a/public/config.json
+++ b/public/config.json
@@ -8,7 +8,7 @@
     "type": "REST",
     "lang": {
         "en-US": {
-            "name": "Pushy",
+            "name": "Pushy1",
           "description": "A Template for a custom Journey Builder activity",
           "step1Label": "Configure Activity"
         }
@@ -24,7 +24,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://mc.s10.exacttarget.com/activity/execute",
+          "url": "https://mc.s10.exacttarget.com/ourneybuilder/api/v1/execute",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -36,22 +36,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "9b57ea26-a5e4-4d56-8a2a-51069b256987",
       "save": {
-        "url": "https://mc.s10.exacttarget.com/activity/save",
+        "url": "https://mc.s10.exacttarget.com/ourneybuilder/api/v1/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://mc.s10.exacttarget.com/activity/publish",
+        "url": "https://mc.s10.exacttarget.com/ourneybuilder/api/v1/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://mc.s10.exacttarget.com/activity/stop",
+        "url": "https://mc.s10.exacttarget.com/ourneybuilder/api/v1/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://mc.s10.exacttarget.com/activity/validate",
+        "url": "https://mc.s10.exacttarget.com/ourneybuilder/api/v1/validate",
         "verb": "POST",
         "useJwt": true
       }
