--- a/public/config.json
+++ b/public/config.json
@@ -24,7 +24,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/execute",
+          "url": "https://custom-activity-v1.herokuapp.com/execute",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -36,22 +36,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "0710e952-75e0-4960-8d1c-7666890edbc4",
       "save": {
-        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/save",
+        "url": "https://custom-activity-v1.herokuapp.com/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/publish",
+        "url": "https://custom-activity-v1.herokuapp.com/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/stop",
+        "url": "https://custom-activity-v1.herokuapp.com/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/validate",
+        "url": "https://custom-activity-v1.herokuapp.com/validate",
         "verb": "POST",
         "useJwt": true
       }
