--- a/public/config.json
+++ b/public/config.json
@@ -21,7 +21,7 @@
                 }									
 			],
           "outArguments": [],
-          "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f",
+          "url": "https://custom-activity-v1.herokuapp.com/",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -33,22 +33,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "9b57ea26-a5e4-4d56-8a2a-51069b256987",
       "save": {
-        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f",
+        "url": "https://custom-activity-v1.herokuapp.com/",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f",
+        "url": "https://custom-activity-v1.herokuapp.com/",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f",
+        "url": "https://custom-activity-v1.herokuapp.com/",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://dashboard.pushy.me/apps/5fbcf82da87af44e187cb06f",
+        "url": "https://custom-activity-v1.herokuapp.com/",
         "verb": "POST",
         "useJwt": true
       }
