--- a/public/config.json
+++ b/public/config.json
@@ -33,22 +33,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "9b57ea26-a5e4-4d56-8a2a-51069b256987",
       "save": {
-        "url": "https://custom-activity-v1.herokuapp.com/",
+        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://custom-activity-v1.herokuapp.com/",
+        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://custom-activity-v1.herokuapp.com/",
+        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://custom-activity-v1.herokuapp.com/",
+        "url": "https://custom-activity-v1.herokuapp.com/journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
       }
