--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bhanuatsfdc/SFMC/journey-builder-activity-template.git"
+    "url": "git+https://github.com/aress-exness/CustomActivityV2.git"
   },
   "keywords": [
     "journey",
@@ -21,9 +21,9 @@
   "author": "Devs United",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bhanuatsfdc/SFMC/journey-builder-activity-template/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/bhanuatsfdc/SFMC/journey-builder-activity-template#readme",
+  "homepage": "https://github.com/aress-exness/CustomActivityV2#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "bower": "^1.8.0",
