--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aress-exness/CustomActivityV2.git"
+    "url": "https://github.com/aress-exness/CustomActivityV2.git"
   },
   "keywords": [
     "journey",
