--- a/public/config.json
+++ b/public/config.json
@@ -17,9 +17,9 @@
         "execute": {
            "inArguments":[
 				{
-                    "Title": "{{Contact.Attribute.pushyJourney.Title}}",
-		    "Data": "{{Contact.Attribute.pushyJourney.Data}}",
-		    "DeviceToken": "{{Contact.Attribute.pushyJourney.DeviceToken}}"
+                    "Title": "{{Contact.Attribute."Pushy API Data Dictionary V2 Test".Title}}",
+		    "Data": "{{Contact.Attribute."Pushy API Data Dictionary V2 Test".Data}}",
+		    "DeviceToken": "{{Contact.Attribute."Pushy API Data Dictionary V2 Test".DeviceToken}}"
                 }									
 			],
           "outArguments": [],
