--- a/public/config.json
+++ b/public/config.json
@@ -17,9 +17,9 @@
         "execute": {
            "inArguments":[
 				{
-                    "Title": "{{Contact.Attribute."Pushy API Data Dictionary V2 Test".Title}}",
-		    "Data": "{{Contact.Attribute."Pushy API Data Dictionary V2 Test".Data}}",
-		    "DeviceToken": "{{Contact.Attribute."Pushy API Data Dictionary V2 Test".DeviceToken}}"
+                    "Title": "{{Contact.Attribute.PushyAPIDictionary.Title}}",
+		    "Data": "{{Contact.Attribute.PushyAPIDictionary.Data}}",
+		    "DeviceToken": "{{Contact.Attribute.PushyAPIDictionary.DeviceToken}}"
                 }									
 			],
           "outArguments": [],
