--- a/public/config.json
+++ b/public/config.json
@@ -17,9 +17,9 @@
         "execute": {
            "inArguments":[
 				{
-                    "Title": "{{Contact.Attribute.PushyAPIDictionary.Title}}",
-		    "Data": "{{Contact.Attribute.PushyAPIDictionary.Data}}",
-		    "DeviceToken": "{{Contact.Attribute.PushyAPIDictionary.DeviceToken}}"
+                    "Title": "{{PushyAPIDictionary.Title}}",
+		    "Data": "{{PushyAPIDictionary.Data}}",
+		    "DeviceToken": "{{PushyAPIDictionary.DeviceToken}}"
                 }									
 			],
           "outArguments": [],
