--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Devs United",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/aress-exness/CustomActivityV/issues"
   },
   "homepage": "https://github.com/aress-exness/CustomActivityV2#readme",
   "dependencies": {
