--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/aress-exness/CustomActivityV2#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.18.2",
     "bower": "^1.8.0",
     "errorhandler": "^1.5.0",
